# gaucho-marketing-ai

./: .env  README.md  ai_system_technical_overview.txt
asset-processing-service/: pyproject.toml
asset-processing-service/asset_processing_service/: api_client.py  config.py  job_processor.py  media_processor.py  models.py
nextjs/: drizzle.config.ts  middleware.ts  package-lock.json  package.json
nextjs/app/: globals.css  layout.tsx
nextjs/app/api/upload/: route.ts
nextjs/components/: ConfigurePromptsStep.tsx  ConfirmationModal.tsx  GenerateContentStep.tsx  GenerateStepBody.tsx  PromptContainerCard.tsx  Sidebar.tsx  SidebarNav.tsx  SidebarToggle.tsx
nextjs/components/project-detail/: ProjectDetailHeader.tsx  ProjectDetailView.tsx
nextjs/components/upload-step/: UploadStepBody.tsx
nextjs/server/: queries.ts
nextjs/server/db/: index.ts  schema.ts
