[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["Brandon Hancock <brandon@brandonhancock.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.12.6"
python-dotenv = "^1.1.0"
pydantic = "^2.11.5"
ffmpeg-python = "^0.2.0"
openai = "^1.82.1"
tiktoken = "^0.9.0"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
